--- a/static/chatbox.html
+++ b/static/chatbox.html
@@ -162,11 +162,23 @@
 
             conn.onmessage = function (evt) {
                 console.log(evt.data);
-                var messages = evt.data.split('\n');
-                for (var i = 0; i < messages.length; i++) {
+                const message = evt.data;
+
+
+                if (message.startsWith("[NOTI]:")) {
                     var item = document.createElement("div");
-                    item.innerText = messages[i];
+                    item.innerHTML = `<b>${message.substring(7)}</b>`;
                     appendLog(item);
+                } else if (message.startsWith("[MSG]:")) {
+                    var item = document.createElement("div");
+                    item.innerHTML = message.substring(6);
+                    appendLog(item);
+                }
+                else if (message.startsWith("[COUNT]:")) {
+                    console.log("calling")
+                    const count = message.split(":")[1];
+                    // Update the count display somewhere if needed
+                    console.log(`Current online count: ${count}`);
                 }
             };
         } else {
