Turn off autocomplete

--- a/static/welcome.html
+++ b/static/welcome.html
@@ -57,7 +57,7 @@
         <h1><span class="chit">Chit</span><span class="chat">chat</span></h1>
         <span id="stat">Start chatting with others now!</span>
         <form id="welcome-form">
-            <input type="text" id="username" required placeholder="Nickname">
+            <input type="text" id="username" autocomplete="off" required placeholder="Nickname">
         </form>
         <input type="submit" form="welcome-form" value="Chat now"></input>
     </div>
