--- a/static/chatbox.html
+++ b/static/chatbox.html
@@ -49,6 +49,8 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
             margin: 0 auto;
+            display: flex;
+            flex-direction: column;
         }
 
         #chatbox {
@@ -93,6 +95,7 @@
             margin: 0 10px;
             padding: 5px;
             border-radius: 5px;
+            border: none;
         }
 
         input[type="submit"] {
@@ -117,10 +120,32 @@
             background-color: green;
             border-radius: 50%;
             display: inline-block;
+            margin-right: 2px;
         }
 
-        .count {
+        #count {
+            color: rgb(87, 87, 87);
+        }
+
+        #stop {
+            border: none;
+            padding: 5px;
+            border-radius: 5px;
+            transition: background-color 0.5s, color 0.5s;
+        }
+
+        #stop.disabled {
+            background-color: gray;
+        }
+
+        #stop.enabled {
+            background-color: rgb(146, 0, 0);
             color: white;
+        }
+
+        #sendBtn {
+            border: none;
+            transition: background-color 0.5s, color 0.5s;
         }
     </style>
 </head>
@@ -137,18 +162,23 @@
         <div id="receive"></div>
         <div id="send"></div>
         <form id="form">
-            <button type="button" id="stop">Stop</button>
-            <input type="text" id="msg" size="64" />
-            <input type="submit" value="Send" />
+            <button type="button" id="stop" disabled="disabled">Stop</button>
+            <input type="text" id="msg" size="64" autocomplete="off" />
+            <input type="submit" id="sendBtn" value="Send" disabled="disabled" />
         </form>
 
     </div>
 
     <script>
         const username = localStorage.getItem('username');
+
         var conn;
         var msg = document.getElementById("msg");
         var log = document.getElementById("log");
+
+        let busy = false;
+        const stopButton = document.getElementById("stop");
+        const sendButton = document.getElementById("sendBtn");
 
         function appendLog(item) {
             var doScroll = log.scrollTop > log.scrollHeight - log.clientHeight - 1;
@@ -158,13 +188,24 @@
             }
         }
 
-        document.getElementById("stop").onclick = function () {
+        function updateButtonsState() {
+            stopButton.disabled = !busy;
+            sendButton.disabled = !busy;
+            if (busy) {
+                stopButton.classList.remove("disabled");
+                stopButton.classList.add("enabled");
+            } else {
+                stopButton.classList.remove("enabled");
+                stopButton.classList.add("disabled");
+            }
+        }
+
+        stopButton.onclick = function (event) {
             event.preventDefault();
             if (conn) {
                 conn.send("[STOP]");
+                updateStopButtonState();
             }
-
-            console.log("Sent: [STOP]");
         };
         document.getElementById("form").onsubmit = function (event) {
             event.preventDefault();
@@ -175,15 +216,10 @@
             if (!msg.value.trim()) {
                 return false;
             }
-            // Append the sent message to the log
-            console.log("You: " + msg.value);
             var item = document.createElement("div");
             item.innerText = "You: " + msg.value;
             appendLog(item);
-
-            // Send the message to the WebSocket server
             conn.send(msg.value);
-            console.log("Sent: " + msg.value);
             msg.value = "";
             return false;
         };
@@ -194,8 +230,6 @@
                 conn.onopen = function (evt) {
                     conn.send(username);
                 }
-                console.log("Connected to server");
-                console.log("Username: " + username);
             } else {
                 window.location.href = "/";
             }
@@ -207,13 +241,16 @@
             };
 
             conn.onmessage = function (evt) {
-                console.log(evt.data);
                 const message = evt.data;
-
-
-                if (message.startsWith("[NOTI]:")) {
+                if (message.startsWith("[NOTI1]:")) {
+                    busy = false;  // Waiting
                     var item = document.createElement("div");
-                    item.innerHTML = `<b>${message.substring(7)}</b>`;
+                    item.innerHTML = `<b>${message.substring(8)}</b>`;
+                    appendLog(item);
+                } else if (message.startsWith("[NOTI2]:")) {
+                    busy = true;  // Chatting
+                    var item = document.createElement("div");
+                    item.innerHTML = `<b>${message.substring(8)}</b>`;
                     appendLog(item);
                 } else if (message.startsWith("[MSG]:")) {
                     var item = document.createElement("div");
@@ -221,10 +258,11 @@
                     appendLog(item);
                 }
                 else if (message.startsWith("[COUNT]:")) {
-                    console.log("calling")
                     const count = message.split(":")[1];
                     document.getElementById('count').innerText = `${message.split(":")[1]}`;
                 }
+
+                updateButtonsState();
             };
         } else {
             var item = document.createElement("div");
