--- a/static/chatbox.html
+++ b/static/chatbox.html
@@ -9,201 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Chat Home</title>
-    <style>
-        body {
-            font-family: "Roboto Mono", monospace;
-            background-color: #010409;
-            margin: 0;
-            padding: 0;
-            min-width: 600px;
-        }
-
-        h1 {
-            font-size: 2em;
-            margin: 2vh;
-            user-select: none;
-            text-align: center;
-        }
-
-        .chit {
-            color: #1b4b4b;
-        }
-
-        .chat {
-            color: #5a293c;
-        }
-
-        .live {
-            color: #5f1011;
-        }
-
-        .box {
-            color: #210d41;
-        }
-
-        #main-container {
-            width: 50%;
-            height: 80vh;
-            padding: 10px 20px;
-            background-color: #101414;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            margin: 0 auto;
-            display: flex;
-            flex-direction: column;
-        }
-
-        #chatbox {
-            overflow: hidden;
-            padding: 0;
-            margin: 0;
-            width: 100%;
-            border-radius: 5px;
-        }
-
-        #form {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 10px;
-        }
-
-        #form button,
-        #form input[type="submit"] {
-            flex: 1;
-            margin: 5px;
-            max-width: calc(50% - 10vw);
-        }
-
-        #form input[type="text"] {
-            flex: 8;
-            margin: 5px;
-            max-width: calc(80% - 10vw);
-        }
-
-        #msg {
-            margin: 0 10px;
-            padding: 5px;
-            border-radius: 5px;
-            border: none;
-        }
-
-        input[type="submit"] {
-            padding: 5px 10px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        #form input[type="text"]:focus {
-            outline: none;
-        }
-
-        .top-log {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .dot {
-            height: 10px;
-            width: 10px;
-            background-color: green;
-            border-radius: 50%;
-            display: inline-block;
-            margin-right: 2px;
-        }
-
-        #count {
-            color: rgb(87, 87, 87);
-        }
-
-        #stop {
-            border: none;
-            padding: 5px;
-            border-radius: 5px;
-            transition: background-color 0.5s, color 0.5s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        #stop.disabled {
-            background-color: gray;
-        }
-
-        #stop.enabled {
-            background-color: rgb(146, 0, 0);
-            color: white;
-        }
-
-        #stop.disabled .fa-spinner {
-            display: inline-block;
-        }
-
-        #stop.enabled .fa-spinner {
-            display: none;
-        }
-
-        #stop.enabled .stop-text {
-            display: inline;
-        }
-
-        #stop.disabled .stop-text {
-            display: none;
-        }
-
-        #sendBtn {
-            border: none;
-            transition: background-color 0.5s, color 0.5s;
-        }
-
-        #log {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            height: 80%;
-            overflow-y: auto;
-            padding: 10px;
-            box-sizing: border-box;
-            border-radius: 5px;
-            background: #181c24;
-            font-weight: 200;
-            text-align: center;
-        }
-
-        .sentMsg {
-            background-color: #404c54;
-            color: rgb(213, 213, 213);
-            padding: 5px 10px;
-            border-radius: 10px;
-            align-self: flex-end;
-            margin-right: 20px;
-            text-align: left;
-            font-weight: 350;
-            margin-bottom: 5px;
-        }
-
-        .receivedMsg {
-            color: rgb(196, 196, 196);
-            background-color: #383434;
-            padding: 5px 10px;
-            border-radius: 10px;
-            text-align: left;
-            align-self: flex-start;
-            margin-left: 20px;
-            font-weight: 350;
-            margin-bottom: 5px;
-        }
-
-        .fa-spinner {
-            color: white;
-        }
-
-        .stop-text {
-            color: rgb(215, 215, 215);
-        }
-    </style>
+    <title>Chitchat | Start chatting</title>
+    <link rel="stylesheet" href="chatbox.css">
 </head>
 
 <body>
@@ -226,118 +33,7 @@
 
     </div>
 
-    <script>
-        const username = localStorage.getItem('username');
-
-        var conn;
-        var msg = document.getElementById("msg");
-        var log = document.getElementById("log");
-
-        let busy = false;
-        const stopButton = document.getElementById("stop");
-        const sendButton = document.getElementById("sendBtn");
-
-        function appendLog(item) {
-            var doScroll = log.scrollTop > log.scrollHeight - log.clientHeight - 1;
-            log.appendChild(item);
-            if (doScroll) {
-                log.scrollTop = log.scrollHeight - log.clientHeight;
-            }
-        }
-
-        function updateButtonsState() {
-            stopButton.disabled = !busy;
-            sendButton.disabled = !busy;
-            if (busy) {
-                stopButton.classList.remove("disabled");
-                stopButton.classList.add("enabled");
-            } else {
-                stopButton.classList.remove("enabled");
-                stopButton.classList.add("disabled");
-            }
-        }
-
-        stopButton.onclick = function (event) {
-            event.preventDefault();
-            if (conn) {
-                conn.send("[STOP]");
-                updateButtonsState();
-            }
-
-            var item = document.createElement("div");
-            item.innerHTML = "<b>You have left the chat</b>";
-            item.style.color = "#9e9e9e";
-            item.style.marginTop = "20px";
-            appendLog(item);
-        };
-        document.getElementById("form").onsubmit = function (event) {
-            event.preventDefault();
-
-            if (!conn) {
-                return false;
-            }
-            if (!msg.value.trim()) {
-                return false;
-            }
-            var item = document.createElement("div");
-            item.innerText = msg.value;
-            item.classList.add("sentMsg");
-            appendLog(item);
-            conn.send(msg.value);
-            msg.value = "";
-            return false;
-        };
-
-        if (window["WebSocket"]) {
-            conn = new WebSocket("ws://" + document.location.host + "/ws");
-            if (username) {
-                conn.onopen = function (evt) {
-                    conn.send(username);
-                }
-            } else {
-                window.location.href = "/";
-            }
-
-            conn.onclose = function (evt) {
-                localStorage.clear();
-            };
-
-            conn.onmessage = function (evt) {
-                const message = evt.data;
-                var item = document.createElement("div");
-                if (message.startsWith("[NOTI1]:")) {
-                    busy = false;
-                    item.innerHTML = `<b>${message.substring(8)} has left the chat</b>`;
-                    item.style.color = "#9e9e9e";
-                    item.style.margin = "20px";
-                    item.style.display = "block";
-                    appendLog(item);
-                } else if (message.startsWith("[CONNECT]:")) {
-                    busy = true;
-                    const partnerName = message.substring(10);
-                    item.innerHTML = `<b>You are now connected to ${partnerName}</b>`;
-                    item.style.color = "#9e9e9e";
-                    item.style.marginBottom = "20px";
-                    item.style.display = "block";
-                    appendLog(item);
-                } else if (message.startsWith("[MSG]:")) {
-                    item.innerHTML = message.substring(6);
-                    item.classList.add("receivedMsg");
-                    appendLog(item);
-                }
-                else if (message.startsWith("[COUNT]:")) {
-                    const count = message.split(":")[1];
-                    document.getElementById('count').innerText = `${message.split(":")[1]}`;
-                }
-
-                updateButtonsState();
-            };
-        } else {
-            var item = document.createElement("div");
-            item.innerHTML = "<b>Your browser does not support WebSockets.</b>";
-            appendLog(item);
-        }
-    </script>
+    <script src="index.js"></script>
 </body>
 
 </html>
